--- a/components/answercard/index.wxml
+++ b/components/answercard/index.wxml
@@ -2,12 +2,13 @@
 <view class="container" animation="{{modalAnimation}}">
 	<view class="content" animation="{{btnAnimation}}">
 		<view class="exit"  bindtap="onClose">
-			<image class="img" src="../../assets/icon/exit.png" />
+      答题卡
+			<image class="img" src="../../assets/icon/exit_pic.png" />
 		</view>
 		<slot name="scantron" />
-		<view class="btn">
+		<!-- <view class="btn">
 			<slot name="btn" />
-		</view>
+		</view> -->
 		<!-- <view class="tip" bindtap="watchResult">交卷并查看结果</view> -->
 	</view>
 </view>
