--- a/pages/exam/index.wxss
+++ b/pages/exam/index.wxss
@@ -1,13 +1,19 @@
 /* pages/exam/index.wxss */
 .clock-list {
 	width: 682rpx;
-	height: 84rpx;
+	height: 100%;
 	margin: 0 auto;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	color: #626262;
+  color: rgb(254,254,254);
+  font-size: 30rpx;
+}
+.clock-wrap {
+  width: 100%;
+  height: 84rpx;
+  background-color: #15DA7F;
 }
 
 .clock-list button {
@@ -17,7 +23,6 @@
 	display: inline-block;
 	line-height: 44rpx;
 	width: 96rpx;
-	font-size: 30rpx;
 	text-align: center;
 	border: 1rpx solid #ccc;
 }
@@ -37,7 +42,6 @@
 }
 
 .timer {
-	font-size: 34rpx;
 	display: table-cell;
 }
 
@@ -45,16 +49,13 @@
 	width: 240rpx;
 	line-height: 44rpx;
 	text-align: center;
-	font-size: 30rpx;
 }
 
-.answer-card text {
-	margin-left: 8rpx;
-}
 
 .topic-wrap {
 	width: 100%;
 	height: 1334rpx;
+  background-color: #F2F6F7;
 }
 
 .topic-wrap swiper {
@@ -67,6 +68,8 @@
 
 .topic-img {
 	height: 700rpx;
+  margin-top: 10rpx;
+  background-color: #fff;
 }
 
 .btn-wrap {
@@ -87,15 +90,15 @@
 }
 
 .submit {
-	width: 650rpx;
-	line-height: 94rpx;
+	width: 588rpx;
+	line-height: 80rpx;
 	text-align: center;
 	position: fixed;
 	bottom: 52rpx;
 	left: 50%;
 	transform: translate(-50%);
-	border-radius: 6rpx;
-	font-size: 34rpx;
+	border-radius: 40rpx;
+	font-size: 36rpx;
 	font-family: "Adobe Heiti Std R";
 }
 
@@ -119,6 +122,25 @@
 .item-text{
 	width: 57rpx;
 	line-height: 34rpx;
-	color:#626262;
 	margin-left: 8rpx;
+}
+
+.quetype {
+  width: 100%;
+  height: 80rpx;
+  background-color: #fff;
+  color: #1C1B1B;
+  font-size: 30rpx;
+}
+.quetype-con {
+  width: 670rpx;
+  line-height: 80rpx;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+.quetype-con .item image {
+  width: 12rpx;
+  display: inline-block;
+  padding: 0 12rpx;
 }
