feature 跳转到认知页面

--- a/pages/detect/index.wxml
+++ b/pages/detect/index.wxml
@@ -16,7 +16,7 @@
   </view>
   <view class="section-list">
     <block wx:for="{{seclist}}" wx:key="index">
-      <view class="sec-wrap" data-id="{{item.id}}" data-item="{{item.section}}" bindtap="toDetect">
+      <view class="sec-wrap" data-submitStatus="{{item.submitStatus}}" data-id="{{item.id}}" data-item="{{item.section}}" bindtap="skipPage">
         <s-sectionlist  seclist="{{item}}" />
       </view>
     </block>
