--- a/components/answercard/index.wxss
+++ b/components/answercard/index.wxss
@@ -10,7 +10,7 @@
 }
 .content {
   width: 100%;
-  height: 595rpx;
+  height: 800rpx;
   background: #fff;
   position: absolute;
   bottom: 0;
@@ -41,13 +41,17 @@
   left: 50%;
   transform: translateX(-50%);
 }
-/* .tip {
-  width: 640rpx;
-  line-height: 80rpx;
-  background-color:#ccc;
-  border-radius: 12rpx;
-  margin: 190rpx auto 0;
+.tip {
+  width: 400rpx;
+  line-height: 60rpx;
+  background-color:rgb(21, 236, 137);
+  border-radius: 30rpx;
+  /* margin: 60rpx auto 30rpx; */
   text-align: center;
-  color: #353535;
-  font-size: 28rpx;}
-  */
+  color: #fff;
+  font-size: 30rpx;
+  position: absolute;
+  bottom: 30rpx;
+  left: 175rpx;
+}
+ 
