--- a/components/sectionlist/index.wxml
+++ b/components/sectionlist/index.wxml
@@ -1,11 +1,11 @@
 <!--components/knoblist/index.wxml-->
 <view class="sec-wrap">
-  <view class="sec-logo">置顶</view>
+  <view class="sec-logo {{seclist.submitStatus !== 0 ? 'active' : 'default'}}"></view>
   <view class="sec-content">
     <span class="sec-name">{{seclist.section}}</span><span class="sec-pro">正确率：  {{seclist.ratio * 100}}%</span>
   </view>
 
-  <block wx:if="{{seclist.submitStatus === 2}}">
+  <block wx:if="{{seclist.submitStatus === 2||seclist.submitStatus === 1}}">
     <view class="sec-sum"><view class="sec-part" style="width:{{seclist.ratio*400}}rpx;"></view></view>
   </block>
   <block wx:else>
