--- a/pages/exam/index.wxss
+++ b/pages/exam/index.wxss
@@ -142,6 +142,7 @@
   justify-content: space-between;
 }
 .quetype-con .item image {
+  vertical-align: middle;
   width: 12rpx;
   display: inline-block;
   padding: 0 12rpx;
