--- a/pages/login/index.wxss
+++ b/pages/login/index.wxss
@@ -3,19 +3,25 @@
   height: 100%;
 }
 
+.p-container .bg {
+  width: 750rpx;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: -1;
+}
 .p-container .logo {
   width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 280rpx;
+  padding-top: 280rpx;
 }
 
 .p-container .logo .pic {
   width: 322rpx;
   height: 150rpx;
-  background: #ccc;
 }
 
 
