--- a/components/grcourse/index.wxml
+++ b/components/grcourse/index.wxml
@@ -1,27 +1,40 @@
 <!--components/grcourse/index.wxml拼课-->
 <view class='lesson' catchtap="{{buycourse}}">
-  <view class='edi'>
-    <text>{{edi}}</text>
-  </view>
   <view class='title'>{{title}}</view>
-  <view class='desc'>
-    <image src='{{tx}}'></image>{{name}}
-    <text>{{num}} 课时</text>
-  </view>
-  <view class='study'>
-    <text>{{point}}</text>
-    <text catchtap="{{cancel}}">{{lesscancel}}</text>
-  </view>
-  <view class='{{mask}}'>
-    <view class='courecancel'>
-      <image src='/assets/icon/cuowu.png' catchtap='cancelpic'></image>
-      <text class='hint'>是否取消课程</text>
-      <text class='confirm' catchtap='confirm'>是</text>
-      <text class='deny' catchtap='cancelpic'>否</text>
+
+  <view class="groupInfo" wx:if="{{hasgroup==true}}">
+    <text class="groupneed">开团缺1人</text>
+    <text class="space">|</text>
+    <view class='{{time}}'>
+      <text>团购倒计时{{retime}}</text>
     </view>
   </view>
-  <view class='{{time}}'>
-    <text>剩余<text class='red'>{{retime}}</text></text>
-    <text>还差<text class='red'>{{groupneed}}</text>人拼团成功</text>
+
+  <view wx:elif="{{hasgroup==false}}">
+    <view class='desc'>
+      <image src='{{tx}}'></image>主讲师：{{name}}
+    </view>
+    <view class="schedule">
+      <progress stroke-width="6" percent="40" color="#15EC89"/>
+    </view>
+  </view>
+
+  <view class="{{lesscancel=='取消团购'?'cancelCourse':'cancelCourse-active'}}">
+    <text catchtap="{{cancel}}">{{lesscancel}}</text>
+  </view>
+   <view class="peopleNum" wx:if="{{hasgroup==true}}">
+     <image src="{{tx}}"></image>
+     <image src="{{tx}}"></image>
+       <image src="{{tx}}"></image>
+     <image src="{{tx}}"></image>
+ </view>
+  <view class='{{mask}}'>
+    <view class='courecancel'>
+    <image src='/assets/icon/cancel.png' class="tipbg"/>
+      <image src='/assets/icon/cuowu.png' catchtap='cancelpic' class="exit"></image>
+     <view class="hint">是否取消课程</view>
+      <text class='confirm' catchtap='confirm'>YES</text>
+      <text class='deny' catchtap='cancelpic'>NO</text>
+    </view>
   </view>
 </view>
