--- a/components/descourse/index.wxml
+++ b/components/descourse/index.wxml
@@ -1,16 +1,21 @@
 <!--components/descourse/index.wxml-->
-<view class='lesson' >
-  <view class='edi'>
-    <!-- <text>{{edi}}</text> -->
-    <text>必修一</text>
+<view class="lesson">
+  <image src="{{courseImage}}" class="courseImage" />
+  <view class="courseInfo">
+    <text class="title">{{title}}</text>
+    <view class="desc">
+      <text class="section">{{section}}</text>
+      <text class="space">|</text>
+      <text class="buynum">{{buynum}}</text>
+    </view>
+    <view class="teacher">
+      <image src="{{teacherImage}}" />
+      <text class="teacherName">主讲师：{{teachecName}}</text>
+      <view class='buycourse'>
+        <text>购买</text>
+      </view>
+    </view>
+
   </view>
-  <view class='title'>{{title}}</view>
-  <view class='desc'>
-  <image src='{{tx}}'></image>{{name}}
-    <text>{{num}} 课时</text>
-  </view>
-  <view class='study'>
-  <text>{{point}}</text>
-  <text>RMB {{money}}</text>
-  </view>
-</view>  
+
+</view>
