--- a/components/mylesson/index.wxss
+++ b/components/mylesson/index.wxss
@@ -1,62 +1,57 @@
 /* components/mylesson/index.wxss */
 .lesson {
-  width: 696rpx;
-  height: 340rpx;
-  margin: 10rpx auto;
-  border: 1px dashed #ccc;
+  background-color: white;
+  width: 626rpx;
+  height: 180rpx;
+  margin: 20rpx auto;
   position: relative;
-}
-.edi {
-  position: absolute;
-  left: 0;
-  top:0;
-  font-size: 20rpx;
-}
-.edi>text {
-  display: block;
-  width: 79rpx;
-  height: 32rpx;
-  text-align: center;
-  background-color: #78b5cf;
+  border: 1px solid white;
+  border-radius:10rpx;
+  padding-left: 40rpx;
 }
 .title {
-  width: 664rpx;
-  margin: 40rpx auto 20rpx;
-  font-size: 28rpx;
-  height: 90rpx;
-  line-height: 90rpx;
+  margin: 34rpx auto 20rpx;
+  font-size: 30rpx;
+  font-family:PingFang SC;
+  font-weight:400;
 }
 .desc {
-  font-size: 28rpx;
+  font-size: 24rpx;
   display: flex;
-  justify-content: space-between;
-  width: 484rpx;
   margin: 20rpx auto 0;
   align-items:center;
 }
 .desc image {
-  width: 76rpx;
-  height: 76rpx;
+  width: 50rpx;
+  height: 50rpx;
   overflow: hidden;
   border-radius: 50%;
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  margin-right: 16rpx;
 }
-.study {
-  display: flex;
-  width: 664rpx;
-  margin: 40rpx auto 0;
-  justify-content: space-between;
-  align-items: center;
-}
-.study text:first-child {
-  color: #B5B5B5;
+.desc text {
+  margin-left: 45rpx;
   font-size: 20rpx;
 }
-.study text:last-child {
-  background-color:  #78b5cf;
-  width: 166rpx;
-  height: 62rpx;
-  line-height: 62rpx;
-  text-align: center; 
-   font-size: 24rpx;
+.schedule {
+  margin-top: 10rpx;
+  width: 400rpx;
 }
+.schedule progress {
+  border: 1rpx solid #E9E9E9;
+  border-radius: 8rpx;
+}
+.study {
+   position: absolute;
+   right: 50rpx;
+   bottom: 13rpx;
+  width: 130rpx;
+  height: 38rpx;
+  line-height: 38rpx;
+  background-color:  #15EC89;
+  text-align: center; 
+  font-size: 20rpx;
+  border-radius:19px;
+   color: white;
+}
+
