--- a/pages/customize/index.wxml
+++ b/pages/customize/index.wxml
@@ -1,32 +1,50 @@
 <!--pages/customize/index.wxml-->
-<view wx:if="{{customize}}" class="customize">
-  <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}"    duration="{{duration}}">
+<!-- 未检测过 -->
+<view wx:if="{{hasCustomize==false}}" class="customize">
+  <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
     <block wx:for="{{imgUrls}}" wx:key="{{index}}">
       <swiper-item>
         <image src="{{item}}" class="slide-image" />
       </swiper-item>
     </block>
   </swiper>
-  <view class='desc u-f30'>
-    <text>检测后，深辅会为你推荐免费的定制课程快去检测吧</text>
+  <view class="tip">
+    <image src="/assets/pic/tip.png"></image>
+  </view>
+  <view class="startTest">
+    <image src="/assets/pic/startTest.png"></image>
   </view>
 </view>
-<view wx:if="{{hasCustomize}}" class="customized">
-<swiper indicator-dots="{{indicatorDots}}"
-  autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
-  <block wx:for="{{video}}" wx:key="{{item.courseId}}">
-    <swiper-item >
-        <image id="myVideo{{item.courseId}}" src="{{item.courseCoverUrl}}"  data-index="{{item.courseId}}"  bindtap="publicInfo"></image>
-    </swiper-item>
-  </block>
-</swiper>
 
-<block wx:for="{{list}}" wx:key="{{item.courseId}}">
-<s-descourse name="{{item.teacherName}}" title="{{item.courseName}}" money="{{item.coursePrice}}" point="{{item.knowledgePoint}}" tx="{{item.teacherAvatar}}" bindtap="courseInfo" data-index="{{item.courseId}}"/>
-</block>
 
-<!-- 加载更多区域 -->
-<view class='loadmore loading'  wx:if="{{hasMore}}">正在加载...</view>
-<view class='loadmore '  wx:else>已经到底了</view>
+<!-- 已检测过 -->
+<view wx:elif="{{hasCustomize==true}}" class="customized">
+  <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
+    <block wx:for="{{video}}" wx:key="{{item.courseId}}">
+      <swiper-item>
+        <image id="myVideo{{item.courseId}}" src="{{item.courseCoverUrl}}" data-index="{{item.courseId}}" bindtap="publicInfo"></image>
+      </swiper-item>
+    </block>
+  </swiper>
+
+<view class="recommend">
+  <image src="/assets/pic/Image.png" />
+  <text class="recommendText">检测推荐</text>
 </view>
 
+
+<block wx:for="{{descourseList}}" wx:key="index">
+<s-descourse title="{{item.title}}" section="{{item.section}}" buynum="{{item.buynum}}" teachecName="{{item.teachecName}}" teacherImage="{{item.teacherImage}}" courseImage="{{item.courseImage}}" />
+</block>
+
+<block wx:for="{{desgrcourseList}}" wx:key="index">
+<s-desgrcourse retime="{{clock}}" title="{{item.title}}"  courseImage="{{item.courseImage}}" groupneed="{{item.groupneed}}"/>
+</block>
+  <!-- <block wx:for="{{list}}" wx:key="{{item.courseId}}">
+    <s-descourse name="{{item.teacherName}}" title="{{item.courseName}}" money="{{item.coursePrice}}" point="{{item.knowledgePoint}}" tx="{{item.teacherAvatar}}" bindtap="courseInfo" data-index="{{item.courseId}}" />
+  </block> -->
+
+  <!-- 加载更多区域 -->
+  <!-- <view class='loadmore loading' wx:if="{{hasMore}}">正在加载...</view>
+  <view class='loadmore ' wx:else>已经到底了</view> -->
+</view>
