--- a/pages/customize/index.wxss
+++ b/pages/customize/index.wxss
@@ -1,32 +1,68 @@
 /* pages/customize/index.wxss */
-.desc {
-  width: 538rpx;
-  margin: 50rpx auto;
-}
-.desc>text {
+
+.tip {
+  margin-top: 166rpx;
   text-align: center;
-  width:100%;
-  display: block;
 }
- .customize swiper image {
+
+.tip image {
+  width: 592rpx;
+  height: 285rpx;
+}
+
+.startTest {
+  margin-top: 27rpx;
+  text-align: center;
+}
+
+.startTest image {
+  width: 155rpx;
+  height: 62rpx;
+}
+
+.customize swiper image {
   width: 100%;
   height: 392rpx;
 }
 
 .customize swiper {
-    width: 100%;
-    height: 400rpx;
-  }
-  .customized swiper {
-    width: 100%;
-    height: 400rpx;
-  }
- .customized swiper image{
-    width: 100%;
-    height:392rpx;
-  }
-  
- .customized video {
-    width: 100%;
-    height: 400rpx;
-  }
+  width: 100%;
+  height: 320rpx;
+}
+
+.customized swiper {
+  width: 100%;
+  height: 320rpx;
+}
+
+.customized swiper image {
+  width: 100%;
+  height: 320rpx;
+}
+
+.customized video {
+  width: 100%;
+  height: 400rpx;
+}
+
+.recommend {
+  margin-top: 28rpx;
+  padding-left: 40rpx;
+    position: relative;
+}
+
+.recommend image {
+  width: 120rpx;
+  height: 74rpx;
+
+}
+
+.recommendText {
+  position: absolute;
+  left: 80rpx;
+  top: 14rpx;
+  color: #1c1b1b;
+  font-size: 36rpx;
+  font-family: PingFang SC;
+  font-weight: bold;
+}
