--- a/components/descourse/index.wxml
+++ b/components/descourse/index.wxml
@@ -6,7 +6,7 @@
     <view class="desc">
       <text class="section">{{section}}</text>
       <text class="space">|</text>
-      <text class="buynum">{{buynum}}</text>
+      <text class="buynum">{{buynum}}人已购</text>
     </view>
     <view class="teacher">
       <image src="{{teacherImage}}" />
