--- a/components/grcourse/index.wxss
+++ b/components/grcourse/index.wxss
@@ -3,13 +3,14 @@
 
 .lesson {
   background-color: white;
-  width: 626rpx;
+  width: 586rpx;
   height: 180rpx;
   margin: 20rpx auto;
   position: relative;
   border: 1px solid white;
   border-radius:10rpx;
   padding-left: 40rpx;
+    padding-right: 40rpx;
 }
 
 .title {
