--- a/components/descourse/index.wxml
+++ b/components/descourse/index.wxml
@@ -9,10 +9,10 @@
       <text class="buynum">{{buynum}}人已购</text>
     </view>
     <view class="teacher">
-      <image src="{{teacherImage}}" />
+      <image  src="{{teacherImage}}" />
       <text class="teacherName">主讲师：{{teachecName}}</text>
       <view class='buycourse'>
-        <text>购买</text>
+        <text bindtap="tobuy" data-id="{{courseId}}">购买</text>
       </view>
     </view>
 
