--- a/pages/gotoclass/index.wxss
+++ b/pages/gotoclass/index.wxss
@@ -1,25 +1,85 @@
 /* pages/gotoclass/index.wxss */
+page {
+  background-color: #f5f5f5;
+}
 swiper {
   width: 100%;
-  height: 400rpx;
+  height: 320rrpx;
 }
 
 video {
   width: 100%;
-  height: 400rpx;
+  height: 320rpx;
 }
 .classnum {
+  width: 482rpx;
+  padding: 14rpx 112rpx;
+  margin: 40rpx auto 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   margin-top: 30rpx;
+  border: 1rpx solid #FBFBFB;
+  border-radius: 10rpx;
+  background-color: white;
 }
 .classnum text {
-  padding-left: 20rpx;
-  width: 270rpx;
-  height: 124rpx;
-  border: 1px solid #ccc;
-  border-radius:10rpx;
-  line-height: 124rpx;
-  margin: 30rpx;
+  width:80rpx;
+  height: 80rpx;
+  border-radius: 50%;
+  line-height: 80rpx;
+  text-align: center;
+  margin:20rpx 33rpx 20rpx 0;
+  border: 1rpx solid black;
+}
+
+.produce {
+  text-align: center;
+  margin-top: 60rpx;
+  font-size: 36rpx;
+  color: #1c1b1b;
+  font-family: PingFang SC;
+  font-weight: bold;
+  height: 72rpx;
+}
+
+.produce text {
+  padding-bottom: 14rpx;
+  border-bottom: 10rpx solid #17e871;
+  border-radius: 5rpx;
+}
+.produceInfo {
+  margin: 32rpx auto 0;
+  height: 736rpx;
+  width: 606rpx;
+  border: 1rpx solid #FBFBFB;
+  border-radius: 10rpx;
+  background-color: white;
+  padding: 0 50rpx;
+  font-family: PingFang SC;
+  font-weight: bold;
+}
+
+.title {
+  font-size: 30rpx;
+  margin-top: 74rpx;
+}
+
+.nameTime {
+  margin-top: 40rpx;
+  display: flex;
+  font-size: 24rpx;
+  font-family: PingFang SC;
+  font-weight: 400;
+}
+
+.name {
+  margin-right: 54rpx;
+}
+
+.courseInfo {
+  font-size: 24rpx;
+  margin-top: 70rpx;
+  font-family: PingFang SC;
+  font-weight: 400;
+  line-height: 48rpx;
 }
