--- a/pages/grclassinfo/index.wxss
+++ b/pages/grclassinfo/index.wxss
@@ -1,4 +1,4 @@
-/* pages/courseinfo/index.wxss */
+/* pages/grclassinfo/index.wxss */
 
 page {
   background-color: #f5f5f5;
@@ -111,9 +111,68 @@ page {
   width: 279rpx;
   height: 68rpx;
 }
-/* 隐藏滚动条 */
-::-webkit-scrollbar{
-width: 0;
-height: 0;
-color: transparent;
+.classgroup {
+  width: 606rpx;
+  height: 246rpx;
+  border: 1rpx solid #FBFBFB;
+  border-radius: 10rpx;
+  background-color: white;
+  margin: 40rpx auto 0;
+  padding: 0 50rpx;
+}
+.grouping {
+  margin-top: 55rpx;
+  font-family:PingFang SC;
+  font-weight:bold;
+  font-size:  30rpx;
+}
+.pintuan {
+  margin-top: 14rpx;
+  display: flex;
+  font-size: 24rpx;
+  font-family:PingFang SC;
+  font-weight:400;
+  align-items: center;
+}
+.groupneed {
+  margin-left: 14rpx;
+  color: #009CFF
+}
+.groupPrice {
+  color:#17E871;
+  margin-left: 14rpx;
+}
+.man {
+  width: 10rpx;
+  height: 24rpx;
+}
+.xing {
+  width: 20rpx;
+  height: 20rpx;
+ margin-left: 40rpx;
+}
+.groupRetime {
+  width: 600rpx;
+  height: 66rpx;
+  border-radius: 33rpx;
+  border: 1rpx solid #009CFF;
+  margin: 18rpx auto 0;
+  background-color: #009CFF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.groupItem {
+  font-size:28rpx;
+font-family:PingFang SC;
+font-weight:400;
+color: white;
+
+}
+.groupRetime image {
+  width: 48rpx;
+  height: 48rpx;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-left:30rpx;
 }
