--- a/pages/publicinfo/index.wxml
+++ b/pages/publicinfo/index.wxml
@@ -1,11 +1,34 @@
 <!--pages/courseinfo/index.wxml-->
-<view class="section tc">
-  <video id="myVideo" src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400"
-    controls></video>
+<!-- video部分 -->
+<view class="publicVideo">
+  <video id="myVideo" src="{{videoSrc}}" object-fit="fill" controls show-center-play-btn="{{false}}" poster="{{videoCover}}" />
+  <image src="/assets/icon/icon_Play.png" class="playImg" bindtap="playVideo" wx:if="{{pause}}" />
 </view>
-<view class="introduce" wx:for="{{list}}" wx:key="{{index}}">
+
+<view class="produce">
+  <text>课程介绍</text>
+</view>
+
+
+<view class="produceInfo" wx:for="{{videoInfoList}}">
+<scroll-view scroll-y style="height: 600rpx;">
   <view class="title">
-    <text>课程介绍</text>
+    <text>{{item.videoTitle}}</text>
   </view>
-  <text>{{item.desc}}</text>
+  <view class="nameTime">
+    <text class="name">讲师： 张怡</text>
+    <text class="time">时间： 2019.08.09</text>
+  </view>
+
+  <view class="courseInfo" wx:for="{{courseInfo}}">
+    <text>{{item.courseIntro}}</text>
+  </view>
+  </scroll-view>
 </view>
+
+  <view class="price" wx:for="{{descourseInfo}}">
+    <image  src="/assets/icon/individual.png" class="individual"/>
+  <image  src="/assets/icon/group.png" class="group"/>
+  <text class="individualText">{{item.coursePrice}}元  单独购买</text>
+  <text class="groupText">{{item.courseGroupPrice}}元 开团</text>
+  </view>
