--- a/pages/pay/index.wxml
+++ b/pages/pay/index.wxml
@@ -1,5 +1,5 @@
 <!--pages/pay/index.wxml-->
-<view class="pay">
+<!-- <view class="pay">
 	<view class="main u-border">
 		<view class="price">
 			<text class="rmb u-f50">¥ </text>
@@ -26,4 +26,14 @@
 		<button class="way u-c-888 u-f28 {{!wxPay ? 'active' : ''}}" bindtap='choosePayWay' data-type='self'>他人代付</button>
 	</view>
 	<s-btn class="btn" btn-text="确认支付" bg-color="#0F6BAC" font-color="#ffffff" bindtap="submitPay"></s-btn>
+</view> -->
+
+
+<view class="p-wrapepr">
+	<view class="info">
+		<image class="bg" src="/assets/pic/paybg.png"/>
+		<view class="price">
+			<view class="price">课程价格 ¥ {{123}}</view>
+		</view>
+	</view>
 </view>
